# PRISM

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: MorphEngine.cpp  MorphEngine.h
Source/DSP/Algorithms/: BitcrushAlgorithm.cpp  BitcrushAlgorithm.h  DistortionAlgorithm.h  DriveAlgorithm.cpp  DriveAlgorithm.h  FoldbackAlgorithm.cpp  FoldbackAlgorithm.h  FuzzAlgorithm.cpp  FuzzAlgorithm.h  HardClipAlgorithm.cpp  HardClipAlgorithm.h  RectifierAlgorithm.cpp  RectifierAlgorithm.h  TubeAlgorithm.cpp  TubeAlgorithm.h  WavefolderAlgorithm.cpp  WavefolderAlgorithm.h
